Fix various layout issues regarding LinearLayout, ViewStack and scrollable nodes (i.e. d-list, d-scrollable-container or children with overflow set to auto)

--- a/ViewStack/themes/ViewStack_template.less
+++ b/ViewStack/themes/ViewStack_template.less
@@ -1,14 +1,15 @@
 @import "../../../../delite/themes/bootstrap/common";
 .d-view-stack {
-	display: inline-block;
+	display: block;
 	.box-sizing(border-box);
 	overflow-x: hidden;
-	position: relative;
+	position: relative; // Enables clipping
 }
 
 .d-view-stack > * {
   .box-sizing(border-box);
 	width: 100%;
+	height: 100%;
 }
 
 .-d-view-stack-transition > * {
@@ -16,6 +17,5 @@
 }
 
 .-d-view-stack-transition {
-	// Avoid vertical scroll bar on flip animations.
-	overflow-y: hidden;
+	overflow-y: hidden; // Avoid vertical scroll bar on flip animations.
 }
